# MeshcoreCudaKeygen

./: CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
src/: cpu_ref.cpp  cpu_ref.h  ed25519_pubonly.cu  ed25519_pubonly.cuh  gpu_search.cu  gpu_search.cuh  gpu_search_ed25519_cuda.cu  gpu_search_ed25519_cuda.h  gui_main.cpp  kernel.cu  main.cpp  seed_gen.cu  seed_gen.cuh  seedpool.cu  seedpool.cuh
